manifests/deploy-istio.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: loyalty-level
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"6abbe7c7c508e6dcbd844f45653076c0506b2bb092ac9354362b8dc696129258","initContainers":["istio-init","enable-core-dump"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"]}'
      creationTimestamp: null
      labels:
        app: loyalty-level
        solution: stock-trader
        version: v1
    spec:
      containers:
      - env:
        - name: MQ_ID
          valueFrom:
            secretKeyRef:
              key: id
              name: mq
        - name: MQ_PASSWORD
          valueFrom:
            secretKeyRef:
              key: pwd
              name: mq
        - name: MQ_HOST
          valueFrom:
            secretKeyRef:
              key: host
              name: mq
        - name: MQ_PORT
          valueFrom:
            secretKeyRef:
              key: port
              name: mq
        - name: MQ_CHANNEL
          valueFrom:
            secretKeyRef:
              key: channel
              name: mq
        - name: MQ_QUEUE_MANAGER
          valueFrom:
            secretKeyRef:
              key: queue-manager
              name: mq
        - name: MQ_QUEUE
          valueFrom:
            secretKeyRef:
              key: queue
              name: mq
        image: loyalty-level:latest
        imagePullPolicy: Always
        name: loyalty-level
        ports:
        - containerPort: 9080
        resources: {}
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - sleep
        - --drainDuration
        - 2s
        - --parentShutdownDuration
        - 3s
        - --discoveryAddress
        - istio-pilot.istio-system:15003
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 1s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: docker.io/istio/proxy:0.5.0
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
          sizeLimit: "0"
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: loyalty-level-service
  labels:
    app: loyalty-level
spec:
  type: NodePort
  ports:
    - port: 9080
      name: http
#     nodePort: 31003
  selector:
    app: loyalty-level
---
#Configure the ingress 
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: loyalty-level-ingress
# annotations:
#   kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /loyalty-level
        backend:
          serviceName: loyalty-level-service
          servicePort: 9080
---
